Tracer bis auf letzte CJump-Option implementiert